# dns-proxmox-audit

./: .gitignore  INSTALL.md  LICENSE  README.md  hacking.md  pyproject.toml
ansible/: dns-audit-pull-merge.yml  dns-audit.yml  proxmox-update-allowed-ips.yml
lib/: audit_export_common.py  dns-hourly-export.py  dns-merge-hourly-names.py  dns-resolve-and-stage-for-pve.py  dns-resolve-names-for-pve.py  dns_audit_names_lib.py  proxmox-update-allowed-ips.py  static-endpoints-export.py
lib/dns_proxmox_audit/: __init__.py  hourly_export.py  merge_hourly.py  names.py  resolve_for_pve.py
systemd/: dns-hourly-export.service  dns-hourly-export.timer
systemd/journald.conf.d/: 90-dns-audit-limits.conf
systemd/resolved.conf.d/: 10-optional-LogLevel.conf.example
systemd/systemd-resolved.service.d/: 10-dns-audit-no-logfilter.conf  10-dns-audit.conf
systemd/tmpfiles.d/: dns-audit.conf
