[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-proxmox-audit"
version = "0.1.0"
description = "DNS audit and Proxmox guest firewall IP staging helpers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["lib"]
